// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Pagination render simple 1`] = `
<div
  className="css-k008qs"
>
  <div>
    <button
      className="css-1uxivci"
      disabled={false}
      onClick={[Function]}
      type="button"
    >
      <svg
        className="css-1hsbuls"
        viewBox="0 0 14 14"
      >
        <use
          xlinkHref="#chevron-up"
        />
      </svg>
    </button>
  </div>
  <div>
    <button
      className="css-15xvrqd"
      onClick={[Function]}
      type="button"
    >
      1
    </button>
    <button
      className="css-15xvrqd"
      onClick={[Function]}
      type="button"
    >
      2
    </button>
    <button
      className="css-130eqw0"
      onClick={[Function]}
      type="button"
    >
      3
    </button>
    <button
      className="css-15xvrqd"
      onClick={[Function]}
      type="button"
    >
      4
    </button>
    <button
      className="css-15xvrqd"
      onClick={[Function]}
      type="button"
    >
      5
    </button>
    <svg
      className="css-1qy43wh"
      viewBox="0 0 16 16"
    >
      <use
        xlinkHref="#more"
      />
    </svg>
    <button
      className="css-15xvrqd"
      onClick={[Function]}
      type="button"
    >
      30
    </button>
  </div>
  <div>
    <button
      className="css-1uxivci"
      disabled={false}
      onClick={[Function]}
      type="button"
    >
      <svg
        className="css-oiyldh"
        viewBox="0 0 14 14"
      >
        <use
          xlinkHref="#chevron-up"
        />
      </svg>
    </button>
  </div>
</div>
`;

exports[`Pagination renders with page size changer 1`] = `
<div
  className="css-k008qs"
>
  <div>
    <button
      className="css-1uxivci"
      disabled={false}
      onClick={[Function]}
      type="button"
    >
      <svg
        className="css-1hsbuls"
        viewBox="0 0 14 14"
      >
        <use
          xlinkHref="#chevron-up"
        />
      </svg>
    </button>
  </div>
  <div>
    <button
      className="css-15xvrqd"
      onClick={[Function]}
      type="button"
    >
      1
    </button>
    <button
      className="css-15xvrqd"
      onClick={[Function]}
      type="button"
    >
      2
    </button>
    <button
      className="css-130eqw0"
      onClick={[Function]}
      type="button"
    >
      3
    </button>
    <button
      className="css-15xvrqd"
      onClick={[Function]}
      type="button"
    >
      4
    </button>
    <button
      className="css-15xvrqd"
      onClick={[Function]}
      type="button"
    >
      5
    </button>
    <svg
      className="css-1qy43wh"
      viewBox="0 0 16 16"
    >
      <use
        xlinkHref="#more"
      />
    </svg>
    <button
      className="css-15xvrqd"
      onClick={[Function]}
      type="button"
    >
      30
    </button>
  </div>
  <div>
    <button
      className="css-1uxivci"
      disabled={false}
      onClick={[Function]}
      type="button"
    >
      <svg
        className="css-oiyldh"
        viewBox="0 0 14 14"
      >
        <use
          xlinkHref="#chevron-up"
        />
      </svg>
    </button>
  </div>
  <div
    className="css-1vkrryt"
    onClick={[Function]}
  >
    <button
      className="css-evzklt"
      type="button"
    >
      10 / page 
      <svg
        className="css-ok8b0z"
        viewBox="0 0 14 14"
      >
        <use
          xlinkHref="#chevron-up"
        />
      </svg>
    </button>
  </div>
</div>
`;

exports[`Pagination renders with page size changer and total 1`] = `
<div
  className="css-k008qs"
>
  <div
    className="css-1dmgfvu"
  >
    21
    -
    30
     of 
    300
     items
  </div>
  <div>
    <button
      className="css-1uxivci"
      disabled={false}
      onClick={[Function]}
      type="button"
    >
      <svg
        className="css-1hsbuls"
        viewBox="0 0 14 14"
      >
        <use
          xlinkHref="#chevron-up"
        />
      </svg>
    </button>
  </div>
  <div>
    <button
      className="css-15xvrqd"
      onClick={[Function]}
      type="button"
    >
      1
    </button>
    <button
      className="css-15xvrqd"
      onClick={[Function]}
      type="button"
    >
      2
    </button>
    <button
      className="css-130eqw0"
      onClick={[Function]}
      type="button"
    >
      3
    </button>
    <button
      className="css-15xvrqd"
      onClick={[Function]}
      type="button"
    >
      4
    </button>
    <button
      className="css-15xvrqd"
      onClick={[Function]}
      type="button"
    >
      5
    </button>
    <svg
      className="css-1qy43wh"
      viewBox="0 0 16 16"
    >
      <use
        xlinkHref="#more"
      />
    </svg>
    <button
      className="css-15xvrqd"
      onClick={[Function]}
      type="button"
    >
      30
    </button>
  </div>
  <div>
    <button
      className="css-1uxivci"
      disabled={false}
      onClick={[Function]}
      type="button"
    >
      <svg
        className="css-oiyldh"
        viewBox="0 0 14 14"
      >
        <use
          xlinkHref="#chevron-up"
        />
      </svg>
    </button>
  </div>
  <div
    className="css-1vkrryt"
    onClick={[Function]}
  >
    <button
      className="css-evzklt"
      type="button"
    >
      10 / page 
      <svg
        className="css-ok8b0z"
        viewBox="0 0 14 14"
      >
        <use
          xlinkHref="#chevron-up"
        />
      </svg>
    </button>
  </div>
</div>
`;

exports[`Pagination renders with total 1`] = `
<div
  className="css-k008qs"
>
  <div
    className="css-1dmgfvu"
  >
    21
    -
    30
     of 
    300
     items
  </div>
  <div>
    <button
      className="css-1uxivci"
      disabled={false}
      onClick={[Function]}
      type="button"
    >
      <svg
        className="css-1hsbuls"
        viewBox="0 0 14 14"
      >
        <use
          xlinkHref="#chevron-up"
        />
      </svg>
    </button>
  </div>
  <div>
    <button
      className="css-15xvrqd"
      onClick={[Function]}
      type="button"
    >
      1
    </button>
    <button
      className="css-15xvrqd"
      onClick={[Function]}
      type="button"
    >
      2
    </button>
    <button
      className="css-130eqw0"
      onClick={[Function]}
      type="button"
    >
      3
    </button>
    <button
      className="css-15xvrqd"
      onClick={[Function]}
      type="button"
    >
      4
    </button>
    <button
      className="css-15xvrqd"
      onClick={[Function]}
      type="button"
    >
      5
    </button>
    <svg
      className="css-1qy43wh"
      viewBox="0 0 16 16"
    >
      <use
        xlinkHref="#more"
      />
    </svg>
    <button
      className="css-15xvrqd"
      onClick={[Function]}
      type="button"
    >
      30
    </button>
  </div>
  <div>
    <button
      className="css-1uxivci"
      disabled={false}
      onClick={[Function]}
      type="button"
    >
      <svg
        className="css-oiyldh"
        viewBox="0 0 14 14"
      >
        <use
          xlinkHref="#chevron-up"
        />
      </svg>
    </button>
  </div>
</div>
`;

exports[`PaginationControlled render simple 1`] = `
<div
  className="css-k008qs"
>
  <button
    className="css-9182wf"
    disabled={false}
    onClick={[Function]}
    type="button"
  >
    <svg
      className="css-1hsbuls"
      viewBox="0 0 14 14"
    >
      <use
        xlinkHref="#chevron-up"
      />
    </svg>
  </button>
  <span
    className="css-1w2ms9p"
  >
    3
  </span>
  <button
    className="css-9182wf"
    disabled={false}
    onClick={[Function]}
    type="button"
  >
    <svg
      className="css-oiyldh"
      viewBox="0 0 14 14"
    >
      <use
        xlinkHref="#chevron-up"
      />
    </svg>
  </button>
</div>
`;

exports[`PaginationControlled renders with page size changer 1`] = `
<div
  className="css-k008qs"
>
  <button
    className="css-9182wf"
    disabled={false}
    onClick={[Function]}
    type="button"
  >
    <svg
      className="css-1hsbuls"
      viewBox="0 0 14 14"
    >
      <use
        xlinkHref="#chevron-up"
      />
    </svg>
  </button>
  <span
    className="css-1w2ms9p"
  >
    3
  </span>
  <button
    className="css-9182wf"
    disabled={false}
    onClick={[Function]}
    type="button"
  >
    <svg
      className="css-oiyldh"
      viewBox="0 0 14 14"
    >
      <use
        xlinkHref="#chevron-up"
      />
    </svg>
  </button>
  <div
    className="css-1vkrryt"
    onClick={[Function]}
  >
    <button
      className="css-evzklt"
      type="button"
    >
      10 / page 
      <svg
        className="css-ok8b0z"
        viewBox="0 0 14 14"
      >
        <use
          xlinkHref="#chevron-up"
        />
      </svg>
    </button>
  </div>
</div>
`;
